--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -1,17 +1,17 @@
+name: Release Please
 on:
   push:
     branches:
       - main
 
-name: release-please
-
 jobs:
-  release-please:
-    runs-on: ubuntu-latest
+  release:
     permissions:
       contents: write
+      issues: write
       pull-requests: write
-    steps:
-      - uses: googleapis/release-please-action@v4
-        with:
-          token: ${{ secrets.LIT_ROBOT_ACCESS_TOKEN }}
+      id-token: write
+    uses: OMICRONEnergyOSS/oscd-gh-workflows/.github/workflows/release-please.yml@main
+    secrets:
+      npm_token: ${{ secrets.NPM_TOKEN }}
+      gh_token: ${{ secrets.GITHUB_TOKEN }}
