--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,37 +1,9 @@
-name: Tests
-
-on: [push]
+name: Unit Tests
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: npm
-      - uses: google/wireit@setup-github-actions-caching/v2
-
-      - run: npm ci
-      - run: npm run build
-        env:
-          WIREIT_FAILURES: continue
-
   test:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: npm
-      - uses: google/wireit@setup-github-actions-caching/v2
-
-      - run: npm ci
-      - run: npx playwright install --with-deps
-      - run: npm test
-        env:
-          WIREIT_FAILURES: continue
+    permissions:
+      contents: write
+      pull-requests: write
+    uses: OMICRONEnergyOSS/oscd-gh-workflows/.github/workflows/unit-and-vrt-tests.yml@main
