--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "catalog"
   ],
   "dependencies": {
-    "lit": "^2.8.0 || ^3.0.0",
+    "@open-wc/scoped-elements": "^3.0.6",
+    "lit": "^3.3.1",
     "tslib": "^2.4.0"
   },
   "devDependencies": {
