--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
     "@types/jasmine": "^4.0.3",
+    "@web/dev-server-polyfill": "^1.0.6",
     "@web/test-runner": "^0.18.2",
     "@web/test-runner-playwright": "^0.11.0",
     "element-internals-polyfill": "^1.3.12",
