--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@omicronenergy/oscd-material-web-base",
-  "version": "2.4.0",
+  "version": "2.3.0",
   "publishConfig": {
     "access": "public"
   },
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/OMICRONEnergyOSS/oscd-material-web-base#readme",
   "scripts": {
+    "lint": "echo 'No linting configured'",
     "build": "wireit",
     "build:ts": "wireit",
     "build:css-to-ts": "wireit",
@@ -57,7 +58,7 @@
   ],
   "dependencies": {
     "@open-wc/scoped-elements": "^3.0.6",
-    "lit": "^3.3.1",
+    "lit": "^3.3.0",
     "tslib": "^2.4.0"
   },
   "devDependencies": {
@@ -66,7 +67,6 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
     "@types/jasmine": "^4.0.3",
-    "@web/dev-server-polyfill": "^1.0.6",
     "@web/test-runner": "^0.18.2",
     "@web/test-runner-playwright": "^0.11.0",
     "element-internals-polyfill": "^1.3.12",
